# DashingDiva

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
config/: config.json  environments.conf
docker/: Dockerfile  docker-compose.yml  init.sql  nginx.conf  prometheus.yml
docs/: ARCHITECTURE.md
scripts/: deploy.sh  setup.sh
src/dashing_diva_scraper/: __init__.py
src/dashing_diva_scraper/database/: __init__.py  manager.py
src/dashing_diva_scraper/models/: __init__.py  review.py
src/dashing_diva_scraper/orchestration/: __init__.py  dagster_pipeline.py  orchestrator.py
src/dashing_diva_scraper/scrapers/: __init__.py  base.py  target.py  ulta.py  walmart.py
src/dashing_diva_scraper/utils/: __init__.py  helpers.py
src/dashing_diva_scraper/web/: __init__.py  dashboard.py
src/dashing_diva_scraper/web/templates/: dashboard.html
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_scraper.py
